--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+  
 /* CHAT STYLES */
 * {
   font-family: Avenir, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
@@ -76,7 +77,7 @@
 .chat-feed {
   height: 100%;
   width: 100%;
-  overflow: hidden;
+  overflow: scroll !important;
   background-color: #eef2f3;
 }
 
@@ -186,6 +187,14 @@
   padding: 0px 12px;
   height: 100%;
 }
+
+.stegano-button {
+  cursor: pointer;
+  padding: 0px 12px;
+  height: 100%;
+  color:red;
+}
+
 
 .send-button {
   height: 42px;
@@ -312,7 +321,7 @@
 
 .nav-bar {
   width: 100%;
-  height: 66px;
+  height: 56px;
   background-color: #007991;
 }
 
@@ -320,17 +329,22 @@
   position: absolute;
   left: 22px;
   top: 12px;
-  font-size: 32px;
+  font-size: 23px;
   font-weight: 700;
   color: white;
+  border:1px solid #fff;
+  padding: 0.15rem 2rem;
 }
 
 .logout-tab {
   position: absolute;
-  top: 22px;
+  top: 12px;
   right: 22px;
   color: white;
   cursor: pointer;
+  background-color: black;
+  padding: 0.5rem 1.5rem;
+  align-items: center;
 }
 
 ::-webkit-scrollbar {
